# libsecrets

./: CMakeLists.txt
cmake/: FindKeyUtils.cmake  FindMCrypt.cmake
src/: CMakeLists.txt  preload.c  secrets.c  secrets.h  secrets_example.c
